--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~11.0.1",
     "dotenv": "^8.2.0",
     "mongoose": "^5.10.15",
+    "multer": "^1.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
