--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
+    "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
